make scrollbars stable (prevent slider jitter)

--- a/assets/qa.css
+++ b/assets/qa.css
@@ -11,21 +11,25 @@ textarea {
     font-weight: 700;
 }
 
-html,body {
-  text-size-adjust: none;
-  -webkit-text-size-adjust: none;
-  -moz-text-size-adjust: none;
-  -ms-text-size-adjust: none;
+html,
+body {
+    text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
+    -ms-text-size-adjust: none;
 }
 
 html {
     font-family: 'RalewaySemiBold', sans-serif;
     width: 100%;
     background-color: #DDD;
+    scrollbar-gutter: stable both-edges;
 }
 
 @media (max-width: 640px) {
-    html { font-size: 3.2vw; }
+    html {
+        font-size: 3.2vw;
+    }
 
     .qa-item {
         font-size: 4vw;
@@ -37,7 +41,7 @@ html {
         width: 100%;
     }
 
-    .qa-itemlist-disabled > .qa-itemlist-header {
+    .qa-itemlist-disabled>.qa-itemlist-header {
         border-top: 1px solid #ddd;
         margin-top: 12px;
         padding-top: 12px;
@@ -45,15 +49,17 @@ html {
 }
 
 @media (min-width: 641px) {
-    html { font-size: 16px; }
+    html {
+        font-size: 16px;
+    }
 }
 
 body {
-    display:flex;
-    flex-direction:column;
-    margin:0;
-    padding:0;
-    background-color: #FFF;   
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    background-color: #FFF;
 }
 
 .qa-header {
@@ -82,7 +88,9 @@ body {
 }
 
 @keyframes qa-spin {
-    to { transform: translateY(-50%) rotate(360deg); }
+    to {
+        transform: translateY(-50%) rotate(360deg);
+    }
 }
 
 .qa-header h1.qa-title {
@@ -136,7 +144,7 @@ body {
     }
 }
 
-.qa-main > * {
+.qa-main>* {
     flex-shrink: 0;
     margin-bottom: .5em
 }
@@ -148,26 +156,27 @@ body {
 }
 
 .qa-textarea {
-    box-sizing:border-box;
-    padding:.5em;
-    resize:none;
+    box-sizing: border-box;
+    padding: .5em;
+    resize: none;
     border: 1px solid #9B9;
     font-family: 'Source Code Pro', monospace;
     font-size: 1em;
 }
 
 .qa-shorttext {
-    padding-left:.5em;
+    padding-left: .5em;
     width: 2em;
     font-family: 'Source Code Pro', monospace;
 }
 
 
-.qa-itemlist, .qa-stats {
+.qa-itemlist,
+.qa-stats {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    padding:.25em;
+    padding: .25em;
     border: 1px solid #9B9;
     background-color: #FFF;
 }
@@ -227,8 +236,8 @@ body {
 
 .qa-itemlist-header {
     box-sizing: border-box;
-    padding:.2em;
-    margin:.25em;
+    padding: .2em;
+    margin: .25em;
 }
 
 .qa-toggle-btn {
@@ -267,7 +276,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
-    padding:.25em;
+    padding: .25em;
     border: 1px solid #9B9;
     background-color: #FFF;
 }
@@ -275,8 +284,8 @@ body {
 .qa-option {
     flex-shrink: 0;
     box-sizing: border-box;
-    padding:.2em;
-    margin:.25em;
+    padding: .2em;
+    margin: .25em;
     margin-right: .75em;
 }
 
@@ -301,55 +310,59 @@ body {
     display: block;
 }
 
-.qa-visible, .qa-visible * {
+.qa-visible,
+.qa-visible * {
     /* display: inherit; */
 }
+
 .qa-hidden {
     display: none !important;
 }
 
 #qa-tutorial-overlay {
-  display: none; /* Hidden by default */
-  position: fixed;
-  z-index: 1000; /* Sit on top of everything */
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    z-index: 1000;
+    /* Sit on top of everything */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
 }
 
 #qa-tutorial-box {
-  box-sizing: border-box;
-  background-color: #fff;
-  border: 1px solid #888;
-  width: calc(1680px - 2em);
-  margin: 5em auto;
-  padding: 1em;
-  position: relative;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    box-sizing: border-box;
+    background-color: #fff;
+    border: 1px solid #888;
+    width: calc(1680px - 2em);
+    margin: 5em auto;
+    padding: 1em;
+    position: relative;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 @media (max-width: 1680px) {
-  #qa-tutorial-box {
-    width: calc(100% - 2em);
-    margin: 4em auto;
-  }
+    #qa-tutorial-box {
+        width: calc(100% - 2em);
+        margin: 4em auto;
+    }
 }
 
 @media (max-width: 640px) {
-  #qa-tutorial-box {
-    width: 100%;
-    margin: 0em;
-  }
+    #qa-tutorial-box {
+        width: 100%;
+        margin: 0em;
+    }
 }
 
 /* Close button style */
 #qa-tutorial-close-button {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  font-size: 28px;
-  cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 28px;
+    cursor: pointer;
 }
 
 #qa-tutorial-open-button {
